--- a/server/assets/index.html
+++ b/server/assets/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>gpipe server admin</title>
+    <title>pipe server admin</title>
     <link rel="stylesheet" type="text/css" href="/static/style.css" />
     <link rel="shortcut icon" href="/static/favicon.ico" />
 </head>
