--- a/server/assets/index.html
+++ b/server/assets/index.html
@@ -21,7 +21,7 @@
             {{range .forwards}}
             <tr>
                 <td>{{.From}}</td>
-                <td>{{.SubDomain}}</td>
+                <td>{{.Subdomain}}</td>
                 <td>:{{.To}}</td>
             </tr>
             {{end}}
