refactor: rename forward -> proxy & authenticator abstract & control transport mux

--- a/server/assets/index.html
+++ b/server/assets/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>Active Forwards</h1>
+    <h1>Active Proxys</h1>
     <table>
         <thead>
             <tr>
@@ -18,7 +18,7 @@
             </tr>
         </thead>
         <tbody>
-            {{range .forwards}}
+            {{range .proxys}}
             <tr>
                 <td>{{.From}}</td>
                 <td>{{.Subdomain}}</td>
