refactor: clean code

--- a/server/assets/index.html
+++ b/server/assets/index.html
@@ -13,7 +13,7 @@
         <thead>
             <tr>
                 <th>From</th>
-                <th>Sub</th>
+                <th>Domain</th>
                 <th>To</th>
             </tr>
         </thead>
@@ -21,7 +21,7 @@
             {{range .proxys}}
             <tr>
                 <td>{{.From}}</td>
-                <td>{{.Subdomain}}</td>
+                <td>{{.Domain}}</td>
                 <td>:{{.To}}</td>
             </tr>
             {{end}}
