--- a/server/assets/index.html
+++ b/server/assets/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Pipe Admin</title>
+    <title>gnar Admin</title>
     <link rel="stylesheet" type="text/css" href="/static/style.css" />
     <link rel="shortcut icon" href="/static/favicon.ico" />
   </head>
